testing ai recommendation

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,12 @@
 ###############################################
 # Backend Image
 ###############################################
-FROM rust:1.73 as builder
+# Use an explicit Rust toolchain installation so that the build is not affected by stale
+# base images that might ship with an older compiler. We install Rust 1.82.0, which is the
+# minimum version required by transitive dependencies such as `icu_normalizer` and `time`.
+FROM rust:bookworm AS builder
+RUN rustup toolchain install 1.82.0 \
+    && rustup default 1.82.0
 WORKDIR /app
 COPY src ./src
 COPY Cargo.toml .
@@ -20,3 +25,5 @@ COPY ./docker-entrypoint.sh ./
 
 ENTRYPOINT ["/app/docker-entrypoint.sh"]
 CMD ["/app/server"]
+
+
